# OculusVorago

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
configs/: icij_mapping.yaml
infra/: README.md
infra/helm-values/: kafka-values.yaml  neo4j-values.yaml  postgresql-values.yaml
infra/k8s/: 00-namespace.yaml  01-secrets.yaml  02-configmap.yaml  ingress.yaml
infra/k8s/aperio/: deployment.yaml
infra/k8s/ontologia/: api-deployment.yaml  consumer-deployment.yaml
infra/k8s/vorago/: batch-job.yaml  configmap.yaml  cronjob.yaml  cronjobs.yaml  deployment.yaml  jobs.yaml  secret.yaml  streaming-deployment.yaml
tests/: test_api_extractor.py  test_config_models.py  test_extractor.py  test_mapper.py  test_ocr_extractor.py  test_pdf_extractor.py  test_pipeline.py  test_sql_extractor.py
vorago/core/: config_models.py  interfaces.py
vorago/engine/: pipeline.py
vorago/extractors/: api_extractor.py  csv_extractor.py  ocr_extractor.py  pdf_extractor.py  sql_extractor.py
vorago/loaders/: kafka_loader.py
vorago/mappers/: dynamic_mapper.py
